# Soundshare-Full

./: .gitignore  .gitmodules  README.md  example.config.toml  pyproject.toml  server_manager.py
docs/: build_docs.py
docs/doxygen/: Doxyfile
utilities-soundshare/: backend.txt  frontend.txt  server.ps1
