[project]
name = "soundshare"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4==4.12.3",
    "bs4==0.0.2",
    "certifi==2024.7.4",
    "charset-normalizer==3.3.2",
    "click==8.1.8",
    "colorama==0.4.6",
    "frida==16.6.6",
    "idna==3.7",
    "markdown-it-py==3.0.0",
    "mdurl==0.1.2",
    "parse-pip-search==0.0.1",
    "protobuf==3.19.3",
    "psutil>=7.1.3",
    "pycryptodome==3.21.0",
    "pygments==2.18.0",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "rich==13.7.1",
    "soupsieve==2.6",
    "tqdm==4.67.1",
    "urllib3==2.2.2",
]

[dependency-groups]
dev = [
    "better-exceptions>=0.3.3",
    "debugpy>=1.8.17",
    "doxypypy>=0.8.8.7",
]

[project.scripts]
soundshare = "server_manager:main"
docs = "docs.build_docs:main"